<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:id="@+id/textview_newtask_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textsize"
        android:text="@string/enter_task_title"/>
    <EditText
        android:id="@+id/edittext_newtask_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_newtask_title"
        android:textColor="@color/yellowtext"
        android:textColorHint="@color/whitetext"
        android:background="@color/blackbackground"
        android:gravity="center"
        android:inputType="text"
        android:hint="@string/finish_homework"/>
    <TextView
        android:id="@+id/textview_newtask_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_newtask_title"
        android:textSize="@dimen/textsize"
        android:text="@string/enter_task_summary"/>
    <EditText
        android:id="@+id/edittext_newtask_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_newtask_summary"
        android:textColor="@color/yellowtext"
        android:textColorHint="@color/whitetext"
        android:background="@color/blackbackground"
        android:gravity="center"
        android:inputType="text"
        android:hint="@string/do_osc_homework"/>
    <TextView
        android:id="@+id/textview_newtask_importance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_newtask_summary"
        android:textSize="@dimen/textsize"
        android:text="@string/enter_task_importance"/>
    <EditText
        android:id="@+id/edittext_newtask_importance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_newtask_importance"
        android:textColor="@color/yellowtext"
        android:textColorHint="@color/whitetext"
        android:background="@color/blackbackground"
        android:gravity="center"
        android:inputType="number"
        android:hint="@string/task_importance"/>
    <Button
        android:id="@+id/button_newtask_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_newtask_importance"
        android:layout_centerHorizontal="true"
        android:text="@string/newtask_savetask"
        android:textAllCaps="false"
        android:onClick="saveTask"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_view"
        android:layout_below="@id/button_newtask_save">
        <TextView
            android:id="@+id/textview_newtask_display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_task"/>
    </ScrollView>
</RelativeLayout>